# literature-synthesis-research-assistant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/corpus/: papers.json
deploy/: azure-deploy.ps1
eval/: harness.py  metrics.py  metrics.yaml
eval/sample_outputs/: brief_2.md  brief_3.md  results.json
examples/: demo.py  questions.md  sample_brief.md
src/lsra/: __init__.py  config.py  pipeline.py  state.py
src/lsra/agents/: __init__.py  critic.py  planner.py  reasoner.py  resolver.py  retriever.py  synthesizer.py
src/lsra/calibration/: __init__.py  conformal.py  platt.py
src/lsra/graph/: __init__.py  build_graph.py
src/lsra/llm/: __init__.py  base.py  providers.py  stub.py
src/lsra/retrieval/: __init__.py  crag.py  hyde.py  rerank.py
src/lsra/safety/: __init__.py  allowlist.py  injection.py  routing.py
src/lsra/tools/: __init__.py  arxiv_mcp.py  corpus.py  sandbox.py  vector_store.py
tests/: test_calibration.py  test_pipeline.py  test_retrieval.py  test_safety.py
